<resources>
    <string name="app_name">Vegetarian recipes</string>
    <string name="vega">Veganski recepti</string>
    <string name="splashtime_key">splashtime_settings</string>
    <string name="splash_key">splash_settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="kategorija">kategorija</string>

    <!-- Strings for intent -->
    <string name="image_id">image ID</string>
    <string name="naziv">name</string>
    <string name="kratak_opis">kratak opis</string>
    <string name="opis">opis</string>

    <!-- Kategorije -->
    <string name="basic_info">Osnovne informacije</string>
    <string name="predjela">Predjela</string>
    <string name="glavna_jela">Glavna jela</string>
    <string name="salate">Salate</string>
    <string name="dezerti">Dezerti</string>
    <string name="detail">Detail</string>

    <!-- String for content description -->
    <string name="info_slika">Info slika</string>
    <string name="image_des">Slika</string>


    <!-- Informacije -->
    <string name="vegan">Veganski recepti</string>
    <string name="vegan_information">Ovo je Veganski kutak sa zdravim i ukusnim obrocima :)</string>

    <!-- Informacije1 -->
    <string name="vegani">Vegani</string>
    <string name="vegani_opis">Činjenica je da nisu svi postali vegani iz istog razloga. Naime, jedni se odlučuju za vegansku ishranu zbog zdravlja, a drugi izbacuju sve namirnice životinjskog porekla zbog ljubavi prema životinjama. Svakako, ima i onih koji u veganstvo prelaze zbog vere, društva, okoline, partnera, alergija, srčanih problema, viška kilograma…</string>

    <!-- Informacije2 -->
    <string name="autor">Autor aplikacije</string>
    <string name="autor_opis">Adrijana Savić</string>

    <!-- Predjela  -->
    <!-- Predjelo1 -->
    <string name="predjelo1">Predjelo 1</string>
    <string name="predjelo1_opis">Opis predjela1</string>
    <string name="predjelo1_opis_detalji">Detalji predjela</string>

    <!-- Predjelo2 -->
    <string name="predjelo2">Predjelo 2</string>
    <string name="predjelo2_opis">Opis predjela2</string>
    <string name="predjelo2_opis_detalji">Detalji predjela</string>

    <!-- Predjelo3 -->
    <string name="predjelo3">Predjelo 3</string>
    <string name="predjelo3_opis">Opis predjela</string>
    <string name="predjelo3_opis_detalji">Detalji predjela</string>

    <!-- Predjelo4 -->
    <string name="predjelo4">Predjelo 4</string>
    <string name="predjelo4_opis">Opis predjela</string>
    <string name="predjelo4_opis_detalji">Detalji predjela</string>

    <!-- Predjelo5 -->
    <string name="predjelo5">Predjelo 5</string>
    <string name="predjelo5_opis">Opis predjela</string>
    <string name="predjelo5_opis_detalji">Detalji predjela</string>

    <!-- Predjelo6 -->
    <string name="predjelo6">Predjelo 6</string>
    <string name="predjelo6_opis">Opis predjela</string>
    <string name="predjelo6_opis_detalji">Detalji predjela</string>

    <!-- Predjelo7 -->
    <string name="predjelo7">Predjelo 7</string>
    <string name="predjelo7_opis">Opis predjela</string>
    <string name="predjelo7_opis_detalji">Detalji predjela</string>

    <!-- Predjelo8 -->
    <string name="predjelo8">Predjelo 8</string>
    <string name="predjelo8_opis">Opis predjela</string>
    <string name="predjelo8_opis_detalji">Detalji predjela</string>

    <!-- Predjelo9 -->
    <string name="predjelo9">Predjelo 9</string>
    <string name="predjelo9_opis">Opis predjela</string>
    <string name="predjelo9_opis_detalji">Detalji predjela</string>

    <!-- Predjelo10 -->
    <string name="predjelo10">Predjelo 10</string>
    <string name="predjelo10_opis">Opis predjela</string>
    <string name="predjelo10_opis_detalji">Detalji predjela</string>

    <!-- Predjelo11 -->
    <string name="predjelo11">Predjelo 11</string>
    <string name="predjelo11_opis">Opis predjela</string>
    <string name="predjelo11_opis_detalji">Detalji predjela</string>

    <!-- Predjelo12 -->
    <string name="predjelo12">Predjelo 12</string>
    <string name="predjelo12_opis">Opis predjela</string>
    <string name="predjelo12_opis_detalji">Detalji predjela</string>

    <!-- Glavna jela -->
    <!--Glavno jelo1 -->
    <string name="glavno_jelo1">Glavno jelo1</string>
    <string name="glavno_jelo1_opis">Opis glavnog jela </string>
    <string name="glavno_jelo1_detail_opis">Detalji glavnog jela</string>

    <!--Glavno jelo2 -->
    <string name="glavno_jelo2">Glavno jelo2</string>
    <string name="glavno_jelo2_opis">Opis glavnog jela </string>
    <string name="glavno_jelo2_detail_opis">Detalji glavnog jela</string>

    <!--Glavno jelo3 -->
    <string name="glavno_jelo3">Glavno jelo2</string>
    <string name="glavno_jelo3_opis">Opis glavnog jela </string>
    <string name="glavno_jelo3_detail_opis">Detalji glavnog jela</string>

    <!--Glavno jelo4 -->
    <string name="glavno_jelo4">Glavno jelo1</string>
    <string name="glavno_jelo4_opis">Opis glavnog jela </string>
    <string name="glavno_jelo4_detail_opis">Detalji glavnog jela</string>

    <!--Glavno jelo5 -->
    <string name="glavno_jelo5">Glavno jelo1</string>
    <string name="glavno_jelo5_opis">Opis glavnog jela </string>
    <string name="glavno_jelo5_detail_opis">Detalji glavnog jela</string>

    <!--Glavno jelo6 -->
    <string name="glavno_jelo6">Glavno jelo1</string>
    <string name="glavno_jelo6_opis">Opis glavnog jela </string>
    <string name="glavno_jelo6_detail_opis">Detalji glavnog jela</string>

    <!-- Salate -->
    <!-- Salata1 -->
    <string name="salata1">Salata1</string>
    <string name="salata1_opis">Salata1 opis</string>
    <string name="salata1_opis_detalji">Salata1 opis detalji</string>
    <string name="promenada_adresa"> Булевар ослобођења 119, Нови Сад 21000</string>
    <string name="promenada_transport">Autobus - 4,7</string>
    <string name="promenada_rVreme">10:00 ~ 22:00</string>

    <!-- Salata2 -->
    <string name="salata2">Salata2</string>
    <string name="salata2_opis">Salata2 opis</string>
    <string name="salata2_opis_detalji">Salata2 opis detalji</string>

    <!-- Salata3 -->
    <string name="salata3">Salata3</string>
    <string name="salata3_opis">Salata3 opis</string>
    <string name="salata3_opis_detalji">Salata3 opis detalji</string>

    <!-- Salata4 -->
    <string name="salata4">Salata4</string>
    <string name="salata4_opis">Salata4 opis</string>
    <string name="salata4_opis_detalji">Salata4 opis detalji</string>

    <!-- Salata5 -->
    <string name="salata5">Salata5</string>
    <string name="salata5_opis">Salata5 opis</string>
    <string name="salata5_opis_detalji">Salata5 opis detalji</string>

    <!-- Salata6 -->
    <string name="salata6">Salata6</string>
    <string name="salata6_opis">Salata6 opis</string>
    <string name="salata6_opis_detalji">Salata6 opis detalji</string>

    <!-- Salata7 -->
    <string name="salata7">Salata7</string>
    <string name="salata7_opis">Salata7 opis</string>
    <string name="salata7_opis_detalji">Salata7 opis detalji</string>


    <!-- Dezerti -->
    <!-- Dezert1 -->
    <string name="dezert1">※Dezert1</string>
    <string name="dezert1_opis">Dezert opis\n※~</string>
    <string name="dezert1_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert2 -->
    <string name="dezert2">※Dezert2</string>
    <string name="dezert2_opis">Dezert opis\n※~</string>
    <string name="dezert2_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert3 -->
    <string name="dezert3">※Dezert3</string>
    <string name="dezert3_opis">Dezert opis\n※~</string>
    <string name="dezert3_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert4 -->
    <string name="dezert4">※Dezert4</string>
    <string name="dezert4_opis">Dezert opis\n※~</string>
    <string name="dezert4_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert5 -->
    <string name="dezert5">※Dezert5</string>
    <string name="dezert5_opis">Dezert opis\n※~</string>
    <string name="dezert5_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert6 -->
    <string name="dezert6">※Dezert6</string>
    <string name="dezert6_opis">Dezert opis\n※~</string>
    <string name="dezert6_opis_detalji">Dezeet opis detalji</string>

    <!-- Dezert7 -->
    <string name="dezert7">※Dezert7</string>
    <string name="dezert7_opis">Dezert opis\n※~</string>
    <string name="dezert7_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert8 -->
    <string name="dezert8">※Dezert8</string>
    <string name="dezert8_opis">Dezert opis\n※~</string>
    <string name="dezert8_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert9 -->
    <string name="dezert9">※Dezert9</string>
    <string name="dezert9_opis">Dezert opis\n※~</string>
    <string name="dezert9_opis_detalji">Dezert opis detalji</string>

    <!-- Dezert10 -->
    <string name="dezert10">※Dezert10</string>
    <string name="dezert10_opis">Dezert opis\n※~</string>
    <string name="dezert10_opis_detalji">Dezert opis detalji</string>


</resources>
