<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_seoul_scenery"
            android:contentDescription="@string/image_des"
            android:scaleType="fitXY"
            android:src="@drawable/vege" />

        <TextView
            android:id="@+id/uvodni_tekst"
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/vegan_information" />

        <TextView
            style="@style/InfoTitleTextStyle"
            android:text="@string/vegani" />

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/vegani_opis" />

        <TextView
            style="@style/InfoTitleTextStyle"
            android:text="@string/autor" />

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/autor_opis" />



    </LinearLayout>
</ScrollView>